--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^1.1.5",
     "styled-components": "^5.3.0",
+    "uuid": "^3.4.0",
     "web-vitals": "^1.1.2",
     "webfontloader": "^1.6.28"
   },
